--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,16 +1,27 @@
-.snake-ai-container{
+.snake-ai-container,
+.metaphor-container,
+.wdwd-container,
+.mafia-moderator-container,
+.most-likely-to-container{
   margin: 40px 80px; /* TODO: increase horizontal margin? */
   display: flex;
   flex-direction: row;
   background-color: white;
-}
-.snake-ai-container{
-  border: 15px solid rgb(124, 0, 249);
   align-items: center;
-
+}
+.snake-ai-container, 
+.most-likely-to-container{
+  border: 15px solid rgb(124, 0, 249);
+}
+.metaphor-container{
+  border: 15px solid rgb(229, 193, 0);
+}
+.wdwd-container, 
+.mafia-moderator-container{
+  border: 15px solid rgb(232, 24, 186);
 }
 
-.snake-ai-text{
+.project-text{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,23 +31,44 @@
   flex: 1;
 }
 
-.snake-ai-heading{
+.snake-ai-heading,
+.metaphor-heading,
+.wdwd-heading,
+.mafia-heading,
+.most-likely-to-heading {
   font-weight: 500;
   font-size: 28px;
+  text-align: center;
 }
-.snake-ai-heading{
+.snake-ai-heading, 
+.most-likely-to-heading{
   color: rgb(124, 0, 249);
 }
+.metaphor-heading{
+  color: rgb(229, 193, 0);
+}
+.wdwd-heading, 
+.mafia-heading{
+  color: rgb(232, 24, 186);
+}
 
-.snake-ai-description{
+.project-description{
   color: rgb(8, 0, 58);
   margin-top: 2px;
   font-weight: 400;
   font-size: 20px;
   text-align: center;
 }
-.snake-ai-concepts{
-  color: rgb(124, 0, 249);;
+.snake-ai-concepts,
+.most-likely-to-concepts{
+  color: rgb(124, 0, 249);
+}
+.metaphor-concepts{
+  color: rgb(229, 193, 0);
+}
+.wdwd-concepts, 
+.mafia-concepts{
+  color: rgb(232, 24, 186);
 }
 
 .project-button-container{
@@ -45,7 +77,7 @@
   margin-top: 10px;
 }
 
-.snake-ai-github-button, .snake-ai-demo-button{
+button{
   background-color: white;
   font-size: 18px;
   padding: 6px 14px;
@@ -55,20 +87,41 @@
   transition: background-color 0.2s,
     color 0.2s,
     opacity 0.2s;
-}
-.snake-ai-github-button, .snake-ai-demo-button{
-  color: rgb(124, 0, 249);
-  border-color: rgb(124, 0, 249);
   margin-left: 12px;
   margin-right: 12px;
 }
 
-.snake-ai-github-button:hover, .snake-ai-demo-button:hover{
+.snake-ai-github-button, .snake-ai-demo-button,
+.most-likely-to-github-button, .most-likely-to-demo-button{
+  color: rgb(124, 0, 249);
+  border-color: rgb(124, 0, 249);
+}
+.metaphor-github-button{
+  color: rgb(229, 193, 0);
+  border-color: rgb(229, 193, 0);
+}
+.wdwd-github-button,
+.mafia-github-button, .mafia-demo-button{
+  color: rgb(232, 24, 186);
+  border-color: rgb(232, 24, 186);
+}
+
+.snake-ai-github-button:hover, .snake-ai-demo-button:hover
+.most-likely-to-github-button:hover, .most-likely-to-demo-button:hover{
   color: white;
   background-color: rgb(124, 0, 249);
 }
+.metaphor-github-button:hover{
+  color: white;
+  background-color: rgb(229, 193, 0);
+}
+.wdwd-github-button:hover,
+.mafia-github-button:hover, .mafia-demo-button:hover{
+  color: white;
+  background-color: rgb(232, 24, 186);
+}
 
-.snake-ai-github-button:active, .snake-ai-demo-button:active{
+button:active{
   opacity: 0.8;
 }
 
@@ -84,30 +137,92 @@
   line-height: 110%;
 }
 
+img{
+  border: 1px solid rgb(185, 185, 185);
+  margin: 20px;
+}
 .snake-ai-image{
   width: 305px;
   height: 315px;
   object-fit: cover;
 }
+.metaphor-image{
+  height: 315px;
+  width: auto;
+  object-fit: cover;
+}
+.wdwd-image{
+  width: 375px;
+  height: auto;
+  object-fit: cover;
+}
+.mafia-image-container,
+.most-likely-to-image-container{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.mafia-settings-image, .mafia-night-image,
+.most-likely-to-image-1, .most-likely-to-image-2{
+  height: 315px;
+  width: auto;
+  object-fit: cover;
+  border: none;
+}
+.mafia-settings-image, 
+.most-likely-to-image-1{
+  margin-right:0;
+}
 
-@media (max-width: 850px){
-  .snake-ai-container{
-    flex-direction: column;
-    min-width: 325px;
+@media (max-width: 1050px) and (min-width: 881px){
+  .metaphor-image{
+    width: 325px;
   }
-  .snake-ai-text{
+  .wdwd-image{
+    width: 325px;
+  }
+}
+@media (max-width: 880px){
+  .snake-ai-container, 
+  .metaphor-container, 
+  .wdwd-container, 
+  .mafia-moderator-container,
+  .most-likely-to-container{
+    flex-direction: column;
+    min-height: 300px;
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+  .project-text{
     order: 2;
   }
-  .snake-ai-image{
+  .snake-ai-image,
+  .metaphor-image,
+  .wdwd-image,
+  .mafia-image-container,
+  .most-likely-to-image-container{
     order: 1; 
-    width: 100%;
     height: 100%;
+    width: 100%;
+    max-height: 300px;
+    min-height: 175px;
+    object-fit: contain;
+    padding-top: 15px;
+    border: none;
+  }
+  .mafia-night-image,
+  .most-likely-to-image-2{
+    margin-left: 10px;
+  }
+  .mafia-settings-image, .mafia-night-image,
+  .most-likely-to-image-1, .most-likely-to-image-2{
+    margin-top: 15px;
     max-height: 300px;
     min-height: 175px;
     object-fit: contain;
   }
-  .snake-ai-container{
-    margin-left: 30px;
-    margin-right: 30px;
+  .project-text{
+    padding-top: 15px;
   }
 }
