Added basic extracurriculars page
Still need to update style to match the rest of the website

--- a/styles/main-page.css
+++ b/styles/main-page.css
@@ -1,4 +1,8 @@
 /* about me section */
+.name-heading{
+  color:rgb(232, 24, 186)
+}
+
 .about-me-container{
   display: flex;
   flex-direction: row;
