--- a/styles/extracurriculars.css
+++ b/styles/extracurriculars.css
@@ -104,7 +104,7 @@ hr:not([size]) {
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: Saira Condensed, Arial;
   font-weight: 700;
   line-height: 1.2;
 }
@@ -156,6 +156,9 @@ h6, .h6 {
 p {
   margin-top: 0;
   margin-bottom: 1rem;
+  font-family: Saira Condensed, Arial;
+  font-size: 18px;
+  font-weight: 500px;
 }
 
 abbr[title],
@@ -11466,41 +11469,77 @@ header.masthead .masthead-heading {
   display: block;
   margin: 0 auto;
 }
-#portfolio .portfolio-item .portfolio-link .portfolio-hover {
+#portfolio .portfolio-item .portfolio-link .portfolio-hover-yellow,
+#portfolio .portfolio-item .portfolio-link .portfolio-hover-magenta,
+#portfolio .portfolio-item .portfolio-link .portfolio-hover-purple {
   display: flex;
   position: absolute;
   width: 100%;
   height: 100%;
-  background: rgba(255, 200, 0, 0.9);
   align-items: center;
   justify-content: center;
   opacity: 0;
   transition: opacity ease-in-out 0.25s;
 }
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
+#portfolio .portfolio-item .portfolio-link .portfolio-hover-yellow{
+  background: rgba(255, 225, 57, 0.9);
+}
+#portfolio .portfolio-item .portfolio-link .portfolio-hover-magenta{
+  background: rgba(255, 67, 214, 0.9);
+}
+#portfolio .portfolio-item .portfolio-link .portfolio-hover-purple{
+  background: rgba(154, 54, 255, 0.9);
+}
+
+#portfolio .portfolio-item .portfolio-link .portfolio-hover-yellow .portfolio-hover-content,
+#portfolio .portfolio-item .portfolio-link .portfolio-hover-magenta .portfolio-hover-content,
+#portfolio .portfolio-item .portfolio-link .portfolio-hover-purple .portfolio-hover-content {
   font-size: 1.25rem;
   color: white;
 }
-#portfolio .portfolio-item .portfolio-link:hover .portfolio-hover {
+#portfolio .portfolio-item .portfolio-link:hover .portfolio-hover-yellow,
+#portfolio .portfolio-item .portfolio-link:hover .portfolio-hover-magenta,
+#portfolio .portfolio-item .portfolio-link:hover .portfolio-hover-purple {
   opacity: 1;
 }
 .portfolio-link{
   background-color: white;
 }
-#portfolio .portfolio-item .portfolio-caption {
+#portfolio .portfolio-item .portfolio-caption-yellow,
+#portfolio .portfolio-item .portfolio-caption-magenta,
+#portfolio .portfolio-item .portfolio-caption-purple{
   padding: 1.5rem;
   text-align: center;
-  background-color: #fff;
 }
-#portfolio .portfolio-item .portfolio-caption .portfolio-caption-heading {
+.portfolio-caption-yellow{
+  background-color: rgb(229, 193, 0)
+}
+.portfolio-caption-magenta{
+  background-color: rgb(232, 24, 186);
+}
+.portfolio-caption-purple{
+  background-color: rgb(124, 0, 249);
+}
+
+#portfolio .portfolio-item .portfolio-caption-yellow .portfolio-caption-heading,
+#portfolio .portfolio-item .portfolio-caption-magenta .portfolio-caption-heading,
+#portfolio .portfolio-item .portfolio-caption-purple .portfolio-caption-heading {
   font-size: 1.5rem;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-weight: 700;
+  /* font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; */
+  font-family: Saira Condensed, Arial;
+  font-weight: 600;
   margin-bottom: 0;
+  color: rgba(8, 0, 58, 1);
 }
-#portfolio .portfolio-item .portfolio-caption .portfolio-caption-subheading {
+#portfolio .portfolio-item .portfolio-caption-yellow .portfolio-caption-subheading,
+#portfolio .portfolio-item .portfolio-caption-magenta .portfolio-caption-subheading,
+#portfolio .portfolio-item .portfolio-caption-purple .portfolio-caption-subheading {
   font-style: italic;
-  font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: Saira Condensed, Arial;
+  font-weight: 500;
+  font-size: 19px;
+  /* font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; */
+  color: rgba(8, 0, 58, 1);
 }
 
 .portfolio-modal .modal-dialog {
@@ -11519,7 +11558,9 @@ header.masthead .masthead-heading {
 .portfolio-modal .modal-content p.item-intro {
   font-style: italic;
   margin-bottom: 2rem;
-  font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: Saira Condensed, Arial;
+  font-weight: 500;
+  font-size: 21px;
 }
 .portfolio-modal .modal-content p {
   margin-bottom: 2rem;
@@ -11819,4 +11860,18 @@ input{
   color: #fff;
   background-color: #d9aa00;
   border-color: #cca000;
+}
+
+/* my styles */
+.bg-night {
+  --bs-bg-opacity: 1;
+  background-color: rgba(8, 0, 58, 1);
+}
+
+.extracurriculars-heading{
+  font-family: Saira Condensed, Arial;
+  font-weight: 500;
+  font-size: 50px;
+  text-align: center;
+  color: rgb(232, 24, 186)
 }
