--- a/styles/extracurriculars.css
+++ b/styles/extracurriculars.css
@@ -159,6 +159,7 @@ p {
   font-family: Saira Condensed, Arial;
   font-size: 18px;
   font-weight: 500px;
+  color: rgba(8, 0, 58, 1);
 }
 
 abbr[title],
@@ -600,6 +601,11 @@ progress {
 }
 .blockquote-footer::before {
   content: "— ";
+}
+
+.img-fluid {
+  max-width: 80%;
+  height: auto;
 }
 
 .extracurriculars-logo{
@@ -3044,11 +3050,49 @@ textarea.form-control-lg {
   background-color: #ffc800;
   border-color: #ffc800;
 }
+.btn-primary-yellow {
+  color:rgb(229, 193, 0);
+  background-color: white;
+  border-color: rgb(229, 193, 0);
+  border-width: 3px;
+  transition: background-color 0.2s,
+    color 0.2s; 
+}
+.btn-primary-magenta{
+  color:rgb(232, 24, 186);
+  background-color: white;
+  border-color: rgb(232, 24, 186);
+  border-width: 3px;
+  transition: background-color 0.2s,
+    color 0.2s; 
+}
+.btn-primary-purple{
+  color:rgb(124, 0, 249);
+  background-color: white;
+  border-color: rgb(124, 0, 249);
+  border-width: 3px;
+  transition: background-color 0.2s,
+    color 0.2s; 
+}
+
 .btn-primary:hover {
   color: #fff;
   background-color: #d9aa00;
   border-color: #cca000;
 }
+.btn-primary-magenta:hover{
+  color: #fff;
+  background-color: rgb(232, 24, 186);
+}
+.btn-primary-yellow:hover{
+  color: #fff;
+  background-color: rgb(229, 193, 0);
+}
+.btn-primary-purple:hover{
+  color: #fff;
+  background-color: rgb(124, 0, 249);
+}
+
 .btn-check:focus + .btn-primary, .btn-primary:focus {
   color: #fff;
   background-color: #d9aa00;
@@ -11332,10 +11376,10 @@ p {
   }
 }
 .btn-xl {
-  padding: 1.25rem 2.5rem;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  padding: 0.6rem 1.2rem;
+  font-family: Saira Condensed, Arial;
   font-size: 1.125rem;
-  font-weight: 700;
+  font-weight: 500;
 }
 
 .btn-social {
@@ -11512,7 +11556,7 @@ header.masthead .masthead-heading {
   text-align: center;
 }
 .portfolio-caption-yellow{
-  background-color: rgb(229, 193, 0)
+  background-color: rgb(229, 193, 0);
 }
 .portfolio-caption-magenta{
   background-color: rgb(232, 24, 186);
@@ -11874,4 +11918,22 @@ input{
   font-size: 50px;
   text-align: center;
   color: rgb(232, 24, 186)
+}
+
+.bmes-header,
+.acm-heading,
+.yellow-concept{
+  color: rgb(229, 193, 0);
+}
+
+.frc-heading,
+.aiaa-heading,
+.magenta-concept{
+  color: rgb(232, 24, 186);
+}
+
+.ai-camp-heading,
+.fsae-heading,
+.purple-concept{
+  color: rgb(124, 0, 249);
 }
