--- a/styles/main-page.css
+++ b/styles/main-page.css
@@ -18,14 +18,12 @@
 
 .about-me{
   color: rgb(229, 193, 0);
-  /* background-color: lightpink; */
   font-weight: 500;
   font-size: 40px;
 }
 
 .bio{
   color: white;
-  /* background-color: lightblue; */
   font-weight: 400;
   font-size: 25px;
   padding-left: 20px;
@@ -38,12 +36,32 @@
   border: 10px solid rgb(229, 193, 0);
 }
 
+@media (max-width: 850px){
+  .about-me-text-container{
+    order: 2;
+  }
+  .profile-image{
+    order: 1;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .about-me-container{
+    flex-direction: column;
+    text-align: center;
+  }
+  .about-me{
+    text-align: center;
+  }
+  .about-me-text-container{
+    text-align: center;
+  }
+}
+
 /* personal projects and extracurricular */
 .personal-projects-container, .extracurriculars-container{
-  margin: 40px 80px; /* TODO: increase horizontal margin? */
+  margin: 40px 80px;
   display: flex;
   flex-direction: row;
-  /* min-width: 700px; */
 }
 .personal-projects-container{
   border: 15px solid rgb(124, 0, 249);
@@ -77,7 +95,6 @@
 
 .personal-projects-info, .extracurriculars-info{
   color: rgb(8, 0, 58);
-  /* background-color: white; */
   font-weight: 400;
   font-size: 22px;
 }
@@ -255,4 +272,8 @@
   cursor: pointer;
   text-decoration: none;
   margin-left: 5px;
+}
+
+.connect-text:hover{
+  color: rgb(229, 193, 0);
 }
