--- a/styles/extracurriculars.css
+++ b/styles/extracurriculars.css
@@ -11099,12 +11099,12 @@ header.masthead .masthead-heading {
 }
 
 .portfolio-modal .modal-dialog {
-  margin: 1rem;
+  margin: 4rem 10rem;
   max-width: 100vw;
 }
 .portfolio-modal .modal-content {
   padding-top: 6rem;
-  padding-bottom: 6rem;
+  padding-bottom: 3rem;
   text-align: center;
 }
 .portfolio-modal .modal-content h2, .portfolio-modal .modal-content .h2 {
