Fixed app centering and updated acm description with hackathon projects

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -173,7 +173,7 @@ img{
   height: auto;
   object-fit: cover;
 }
-.app-container
+.app-container,
 .focus-pal-image-container{
   display: flex;
   flex-direction: row;
